--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_URL='http://localhost:3333'
-VITE_NODE_ENV='development'
+VITE_API_URL=https://e2f0cf9a87ac.ngrok-free.app
+# VITE_API_URL='http://localhost:3333'
+VITE_NODE_ENV=development
