--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=https://e2f0cf9a87ac.ngrok-free.app
-# VITE_API_URL='http://10.1.1.243:4242'
+# VITE_API_URL=https://e2f0cf9a87ac.ngrok-free.app
+VITE_API_URL='http://10.1.1.243:4242'
 VITE_NODE_ENV=development
