--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
